# AI-Travel-Agent-Flask

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  app.py  docker-compose.yml  env.example  nginx.conf  pyproject.toml  railway.json  railway.toml  requirements.txt  run_script.py  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
static/: script.js  style.css
templates/: index.html
